<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.airweb.airwebtest.MainActivity">
    <item
        android:id="@+id/action_news"
        android:orderInCategory="100"
        android:title="@string/type_news_lable"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_hot"
        android:orderInCategory="100"
        android:title="@string/type_hot_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_actualite"
        android:orderInCategory="100"
        android:title="@string/type_actualite_label"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by_date"
        android:orderInCategory="100"
        android:title="@string/date_label"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sort_by_title"
        android:orderInCategory="100"
        android:title="@string/titre_label"
        app:showAsAction="ifRoom" />
</menu>